--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,16 @@ body {
     background: url('../img/backgroundwebp.jpg');
 }
 
+button {
+    appearance: none;
+    border: 0;
+    border-radius: 5px;
+    background: #4676D7;
+    color: #fff;
+    padding: 8px 16px;
+    font-size: 16px;
+  }
+
 .card {
     width: 400px;
     margin: 30px auto;
