--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ body {
 
 button {
     appearance: none;
-    border: 0;
     border-radius: 5px;
     background: #4676D7;
     color: #fff;
@@ -17,7 +16,6 @@ button {
     width: 400px;
     margin: 30px auto;
     padding: 20px;
-
     background-color: rgb(22 58 103 / 60%);
     box-shadow: 0 5px 10px gray;
     border-radius: 10px;
@@ -28,7 +26,7 @@ button {
     width: 200px;
     height: 200px;
     margin: 0 auto;
-    border-radius: 50%;
+    border-radius: 60%;
 }
 
 .card-title {
@@ -38,9 +36,11 @@ button {
 }
 
 .card-text {
+    display: flex;
     font-size: 20px;
     color: gray;
     text-align: center;
+    flex-direction: column;
 }
 
 .card-subtitle {
